--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,44 @@
-
 .navbar {
-    padding-left: 150px;
-    background-color: #007BFF;
+  padding-left: 150px;
+  background-color: #007bff;
 }
 
 .column-1 {
-    height: 400px;
-    background-color: #6BB56B;
-    
+  height: 400px;
+  background-color: #6bb56b;
 }
 
 .column-2 {
-    background-color: #299BFF
-    ;
+  background-color: #299bff;
 }
 #first-container {
-    border:1px solid black;
-    border-radius: 30px;
-    
+  border: 1px solid black;
+  border-radius: 30px;
 }
 .column-3 {
-    height: 33%
+  height: 33%;
 }
-
+.part-1 {
+  background-color: #fff7bd;
+}
+.part-2 {
+  background-color: #ffed69;
+}
+.part-3 {
+  background-color: #ffe41f;
+}
+.card-head {
+  background-color: rgb(216, 213, 213);
+  text-align: center;
+}
+.view-btn {
+  border: 1px solid black;
+}
+.view {
+  border-right: 1px solid black;
+  text-align: center;
+  width: 20px;
+}
 /* .third-column-1 {
     background-color: #FFF7BD;
     height: 100px;
@@ -39,5 +55,8 @@ background-color: #FFE41F;
 } */
 
 .third-rows {
-    height: 100px
+  height: 100px;
+}
+.card-container {
+  gap: 25px;
 }
